--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     
-    <link rel="manifest" href="/manifest.webmanifest"> 
-
+    <link rel="manifest" href="/manifest.json"> 
+    <meta name="theme-color" content="#1d4ed8">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Forensic">
+    <link rel="apple-touch-icon" href="/icon.png">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ForensicTrack - Gerenciamento de Casos</title>
+
+    <script>
+      // Registro do Service Worker para permitir a instalação
+      if ('serviceWorker' in navigator) {
+          window.addEventListener('load', function() {
+              navigator.serviceWorker.register('/sw.js').then(function() {
+                  console.log('ForensicTrack: App pronto');
+              });
+          });
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
